fix: main alignment fix, hero alignment fix, fixes z-index issue between hero and sidemenu (#1323)

--- a/themes/rijkshuisstijl-2008/_index.scss
+++ b/themes/rijkshuisstijl-2008/_index.scss
@@ -522,6 +522,7 @@
 
   // Main
   $main-padding-top: spacing.$spacing-400,
+  $main-padding-bottom: spacing.$spacing-400,
 
   // Navigation
   $navigation-list-padding: 0,
